--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 
 This is a project to implement an interactive Linux shell with debugging and statistical features in ANSI Common Lisp.
 
-Inspired by the Lisp REPL and Incompatible Timesharing System’s [[https://en.wikipedia.org/wiki/Dynamic_debugging_technique][DDT]] (hence the name DMT, /M/ stands for /Meta/, /T/ stands for famous poet, Pasha /T/echnique).
+Inspired by the Lisp REPL and Incompatible Timesharing System’s [[https://en.wikipedia.org/wiki/Dynamic_debugging_technique][DDT]] (hence the name DMT, /M/ stands for /Meta/, /T/ stands for famous poet, Pasha /Technique/).
 
 ** Features
 
